# reliefcal

./: .gitignore  README.md  cli.py  main.py  pyproject.toml  server.py
ai/: ai.py  cloud.py  pyproject.toml
app/: README.md  pubspec.yaml
app/android/app/src/main/: AndroidManifest.xml
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/src/: app.dart
app/lib/src/components/: PremadeOptions.dart  my_search_bar.dart  option.dart  search_result.dart  search_results.dart
app/lib/src/localization/: app_en.arb
app/lib/src/network/: network_search_results.dart
app/lib/src/pages/: home_page.dart
app/lib/src/settings/: settings_controller.dart  settings_service.dart  settings_view.dart
app/lib/src/state/: search_model.dart  search_state.dart
app/linux/: CMakeLists.txt  my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/macos/Runner/Configs/: AppInfo.xcconfig
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
backend/: network.py  search.py  tools.py
backend/custom_tools/: fire.py  food.py  google.py  hospitals.py  police.py  redcross.py  salvationarmy.py  tool.py  weather.py  women.py
data/: hospitals.csv  women.csv
